Add schema to NodeInfo/ShardInfo
See https://github.com/crate/crate/pull/16456 for details